# proyecto-orders

./: .gitignore  README.md
clientes/: .env  .gitignore  README.md  pyproject.toml
clientes/app/: config.py  main.py
clientes/app/config/: settings.py
clientes/app/db/: database.py  mongo.py
clientes/app/models/: cliente_model.py
clientes/app/routers/: clientes_router.py
clientes/app/schemas/: cliente_schema.py  direccion_schema.py  tipo_via.py
clientes/app/services/: cliente_service.py
docs/: arquitectura.md
docs/api/: clientes.md
